--- a/privbind.1
+++ b/privbind.1
@@ -87,7 +87,7 @@ privileges and runs (exec(2)) the command, the other remains as root.
 \fBPrivbind\fR uses LD_PRELOAD to intercept every call to bind(2) made
 by the program. Calls that can be completed non-privileged are done so.
 Calls that require root privileges are forwarded to the root process, that
-carry them out on the program's behalf.
+carries them out on behalf of the program.
 
 A more detailed explanation is available in the README file.
 
