Note about missing setting of secondary groups
Should it be implemented some time?

--- a/privbind.1
+++ b/privbind.1
@@ -38,6 +38,7 @@ It should be an unprivileged (non-root) user.
 .B \-g
 Specifies the group to switch to when running the given command. If this
 option is missing, then the given user's default group is used.
+Note: the secondary groups are currently always left empty.
 .TP
 .BR \-n
 .BR privbind 's
