--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+privbind (1.1-1.cj) unstable; urgency=low
+
+  * recompiled from upstream / my patches
+
+ -- Christian Jaeger <chrjae@gmail.com>  Sat, 03 Apr 2010 10:43:49 -0400
+
 privbind (1.1-1) unstable; urgency=low
 
   * New upstream release
