Doc fix: not as a child of the application process

--- a/privbind.1
+++ b/privbind.1
@@ -67,8 +67,7 @@ Shows a short help screen, and exits.
 .SH "EXIT STATUS"
 Using technical jargon,
 .B privbind
-execs \fIcommand\fR as its main process, running itself in the background (as
-a child of the application's process). The
+execs \fIcommand\fR as its main process, running itself in the background. The
 practical upshot of this, in layman's terms, is that the user never sees
 \fBprivbind\fR's exit status. When running \fBprivbind\fR, the process will exit
 whenever, and with whatever exit status, \fIcommand\fR does.
